--- a/index.html
+++ b/index.html
@@ -28,4 +28,55 @@
       <li>Homo sapiens sapiens</li>
     </ul>
   </ul>
+
+  <h1><strong>Human Evolution</strong></h1>
+  <p>
+    <image src="evolution-diagram.png" />
+  </p>
+  <a href=" https://www.biologyonline.com/dictionary/homo-sapiens-sapiens"
+    >Biology Online</a
+  >
+  <h2>Clickable Image</h2>
+  <a href=" https://www.biologyonline.com/dictionary/homo-sapiens-sapiens"
+    ><image src="evolution-diagram.png"
+  /></a>
+
+  <table>
+    <tr>
+      <th>Homo habilis</th>
+
+      <th>Homo erectus</th>
+
+      <th>Homo neanderthalensis</th>
+
+      <th>Homo sapiens</th>
+    </tr>
+
+    <tr>
+      <td>Handy man</td>
+
+      <td>Upright man</td>
+
+      <td>Neandertal</td>
+
+      <td>Wise man</td>
+    </tr>
+
+    <tr>
+      <td>∼2.3–1.65 million years ago</td>
+
+      <td>∼2 million years ago</td>
+
+      <td>∼40,000 years ago</td>
+
+      <td>∼13.000 years ago to today</td>
+    </tr>
+  </table>
+
+<p>
+  <pre>
+							What are homo sapiens?		Homo sapiens is the species of all the highly developed primates on earth,		a category that living humans belong to.		These primates include humans,								apes,								lorises,								tarsiers,								lemurs,								monkeys.	</pre
+  >
+
+</p>
 </body>
