I added a link element to the HEAD

--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 <html>
   <head>
     <title>My Web Page</title>
+    <link rel="stylesheet"  type="text/css" href="./15_11_2021.css" />
+    <!-- This is a comment line-->
+    <!-- 
+      <style type="text/css">
+      h1 {
+        font-size: 24pt;
+        color: red;
+        text-decoration: underline;
+        font-family: tahoma, helvetica, sans-serif;
+      }
+      em {
+        font-style: normal;
+        color: green;
+        background-color: lightgrey;
+        font-weight: bold;
+      }
+    </style>
+    -->
+
   </head>
 </html>
 <body>
