--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <p>
     <strong> Introduction to Information Systems </strong>
   </p>
-  <p>
+  <p class="centered" >
     <em>
       Ahmet Can Şener
       <br />
